--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.1
 Django==3.1.3
 djangorestframework==3.12.2
 Faker==4.14.2
+pillow==10.3.0
 python-dateutil==2.8.1
 pytz==2020.4
 six==1.15.0
