--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-asgiref==3.3.1
-Django==3.1.3
+asgiref==3.8.1
+Django==3.2.10
+django-redis==4.12.1
 djangorestframework==3.12.2
 Faker==4.14.2
 pillow==10.3.0
 python-dateutil==2.8.1
 pytz==2020.4
+redis==5.0.4
 six==1.15.0
 sqlparse==0.4.1
 text-unidecode==1.3
